--- a/environment.yml
+++ b/environment.yml
@@ -2,26 +2,26 @@ name: P9
 channels:
   - defaults
 dependencies:
-  - blas=1.0=mkl
-  - ca-certificates=2023.01.10=haa95532_0
-  - icc_rt=2022.1.0=h6049295_2
-  - intel-openmp=2023.1.0=h59b6b97_46319
-  - libffi=3.4.4=hd77b12b_0
-  - mkl=2023.1.0=h8bd8f75_46356
-  - mkl-service=2.4.0=py38h2bbff1b_1
-  - mkl_fft=1.3.6=py38hf11a4ad_1
-  - mkl_random=1.2.2=py38hf11a4ad_1
-  - numpy=1.19.5=py38h749eb61_5
-  - numpy-base=1.19.5=py38h9413944_5
-  - openssl=1.1.1t=h2bbff1b_0
-  - pip=23.0.1=py38haa95532_0
-  - python=3.8.16=h6244533_3
-  - setuptools=67.8.0=py38haa95532_0
-  - sqlite=3.41.2=h2bbff1b_0
-  - tbb=2021.8.0=h59b6b97_0
-  - vc=14.2=h21ff451_1
-  - vs2015_runtime=14.27.29016=h5e58377_2
-  - wheel=0.38.4=py38haa95532_0
+  - blas=1.0
+  - ca-certificates=2023.01.10
+  - icc_rt=2022.1.0
+  - intel-openmp=2023.1.0
+  - libffi=3.4.4
+  - mkl=2023.1.0
+  - mkl-service=2.4.0
+  - mkl_fft=1.3.6
+  - mkl_random=1.2.2
+  - numpy=1.19.5
+  - numpy-base=1.19.5
+  - openssl=1.1.1t
+  - pip=23.0.1
+  - python=3.8.16
+  - setuptools=67.8.0
+  - sqlite=3.41.2
+  - tbb=2021.8.0
+  - vc=14.2
+  - vs2015_runtime=14.27.29016
+  - wheel=0.38.4
   - pip:
     - absl-py==0.15.0
     - astunparse==1.6.3
